--- a/dist.ini
+++ b/dist.ini
@@ -1,11 +1,8 @@
 version=0.02
 
 name=App-pretty
-author=Steven Haryanto <stevenharyanto@gmail.com>
-license=Perl_5
-copyright_holder=Steven Haryanto
 
-[@Author::SHARYANTO]
+[@Author::PERLANCAR]
 :version=0.23
 
 [Prereqs]
