--- a/dist.ini
+++ b/dist.ini
@@ -7,11 +7,9 @@ name=App-pretty
 
 [Prereqs]
 perl=5.010001
-
 strict=0
 warnings=0
-
 Data::Format::Pretty=0
 Getopt::Long=0
-JSON=0
+JSON::MaybeXS=0
 YAML::Syck=0
